# Ferrebot-Saas

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-entrypoint.sh  pyproject.toml  railway.api.toml  railway.toml  wrangler.jsonc
.claude/: settings.json
.planning/: PRD.md  roadmap.md  task_list.md
ai/: __init__.py  agenda_tools.py  agent.py  bypass.py  cobranza_tools.py  confirmacion.py  cotizaciones_tools.py  dispatcher.py  envelope.py  faq_tools.py  handoff_tools.py  limites.py  obra_tools.py  pedidos_tools.py  ports.py  postventa_tools.py  reservas_tools.py  rieles.py  saneamiento.py  tools.py  turno.py
core/: __init__.py  crypto.py  logging.py  money.py  observability.py
dashboard/: .env.example  .gitignore  index.html  package-lock.json  package.json  pwa-assets.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.setup.js
design-propuestas/: index.html  propuesta-aurora-clinica.html  propuesta-brasa-restaurante.html  propuesta-lienzo-generico.html  propuesta-navaja-barberia.html
docs/: DEPLOY-RAILWAY-PILOT.md  DEV-LOCAL.md  agente-impresion.md  ai-provider-abstraction.md  ai-tools.md  api-contract.md  architecture.md  auth-rbac.md  catalogo-de-oferta.md  data-model.md  decisiones-migracion.md  deuda-tecnica.md  diagrams.md  facturacion-dian.md  facturacion-matias-extract.md  feature-flags.md  ferrebot-logica-portar.md  goal-bot-acierto-ventas.md  goal-mejoras-lija-vinilo.md  goal-pack-restaurante.md  goal-prompt.md  goal-restaurante-ronda2.md  handoff-cowork-2026-06-07.md  handoff-cowork-2026-06-08-manifiesto-provisionador.md  handoff-cowork-2026-06-08-whatsapp-agentes.md  handoff-cowork-2026-06-09-cierre.md  handoff.md  infra-railway.md  migracion-puntorojo.md  offline-sync.md  onboarding-tenant.md  pack-agenda-citas.md  pim-rbac-mapeo.md  plan-dashboard-agente-2026.md  plan-demo-sirius.md  plan-impulso-agentes-2026.md  plan-login-real.md  plan-melquiadez-superficie-publica.md  plan-onboarding-magico.md  plan-operacion-maquinas-vivo.md  (+15 more)
ferrebot_export/: columnas.csv  fks.txt  indices.txt  schema.sql
landing/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
prospecto-pim/: Brief-Prospecto-PIM.docx  PROMPT-FABLE-PLANNING.md  README.md
services/: __init__.py
tests/: carta_siriuss.py  conftest.py  test_admin_exencion_frontera.py  test_admin_panel_b3.py  test_admin_tenants.py  test_agente.py  (+278 more)
(+919 files in other folders)
