[project]
name = "ferrebot-saas"
version = "0.1.0"
description = "POS multi-empresa (SaaS) con dashboard web y agente IA en Telegram."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",          # driver async (runtime API), vía PgBouncer
    "psycopg[binary]>=3.2",   # driver sync (Alembic, provisioning, tools)
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",                 # manifiesto de tenant (ADR 0007): loader YAML/JSON, provisioning
    "structlog>=24.4",
    "python-jose[cryptography]>=3.3",  # JWT
    "passlib[bcrypt]>=1.7",            # hash de contraseñas
    "cryptography>=44.0",             # AEAD para secretos por empresa
    "sse-starlette>=2.1",            # SSE acotado por empresa
    "rapidfuzz>=3.10",              # fuzzy match conservador (búsqueda de catálogo)
    "redis>=5.2",                   # cola/caché + dedup y pendiente de confirmación (asyncio)
    "arq>=0.26",                    # cola de jobs (emisión DIAN asíncrona) sobre Redis
    "python-multipart>=0.0.32",    # parseo multipart (subida de foto de soporte a proveedores)
    "cloudinary>=1.44.2",          # fotos de soporte por empresa (import perezoso; cred. cifradas)
    "httpx>=0.28",                 # cliente HTTP de runtime (Telegram sendMessage, MATIAS, Whisper)
    "openai>=1.0",                 # SDK del proveedor LLM por defecto (core/llm/providers/openai.py)
    "anthropic>=0.40",             # SDK del proveedor Claude (core/llm/providers/claude.py)
    "sentry-sdk[fastapi]>=2.0",    # observabilidad de errores (api/bot ASGI + worker arq)
    "google-auth>=2.35",           # service account del sync write-only con Google Calendar (pack agenda)
    "google-api-python-client>=2.150",  # API de Google Calendar (import perezoso en modules/agenda/gcal.py)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "anyio>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "apps", "modules", "ai", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "modules"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.uv]
# uv gestiona el venv con Python 3.12 (asyncpg/psycopg tienen wheels estables ahí)
